# fastapi-web-calendar-api

./: .gitignore  preload.py  pyproject.toml
.github/workflows/: upload_wiki.yaml
fastapi_web_calendar/: main.py
fastapi_web_calendar/api/v1/: api.py
fastapi_web_calendar/api/v1/endpoints/: event.py
fastapi_web_calendar/schemas/: errors.py  event.py
tests/: test_fastapi_web_calendar.py
