[tool.poetry]
name = "fastapi-web-calendar"
version = "0.1.0"
description = ""
authors = ["goncharoman <goncharoman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.12.2"
isort = "^5.10.1"
autopep8 = "^1.6.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
